--- a/projects/projectName7/project7.html
+++ b/projects/projectName7/project7.html
@@ -29,50 +29,102 @@
   <body>
     <div class="mainHeader">
       <div class="iconWhatsapp">
-          <img src="images/Icon awesome-whatsapp.svg" alt="icon" class="imgW">
+        <img src="images/Icon awesome-whatsapp.svg" alt="icon" class="imgW" />
       </div>
       <div dir="rtl" class="headerText">
         <h1>לחשוב מחוץ ל</h1>
-        <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית להאמית קרהשק סכעיט דז מא, מנכם למטכין נשואי מנורך. לורם איפסום דולור סיט אמט, קוואזי במר מודוף.</p>
+        <p>
+          לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית להאמית קרהשק סכעיט
+          דז מא, מנכם למטכין נשואי מנורך. לורם איפסום דולור סיט אמט, קוואזי במר
+          מודוף.
+        </p>
       </div>
       <div class="iconBox">
-        <img src="images/Group 1050.svg" alt="">
+        <img src="images/Group 1050.svg" alt="" />
       </div>
     </div>
     <div class="mainCard">
       <div class="card card1">
-        <img src="images/location-dot-solid.svg" alt="" >
+        <img src="images/location-dot-solid.svg" alt="" />
         <h1>כותרת אזור</h1>
         <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה</p>
       </div>
       <div class="card card2">
-        <img src="images/address-card-regular.svg" alt="" >
+        <img src="images/address-card-regular.svg" alt="" />
         <h1>כותרת אזור</h1>
-        <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם 
+        <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם</p>
       </div>
+
       <div class="card card3">
-        <img src="images/wand-magic-sparkles-solid.svg" alt="" >
+        <img src="images/wand-magic-sparkles-solid.svg" alt="" />
         <h1>כותרת אזור</h1>
-        <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם 
+        <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם</p>
       </div>
+
       <div class="card card4">
-        <img src="images/briefcase-outline.svg" alt="" >
+        <img src="images/briefcase-outline.svg" alt="" />
         <h1>כותרת אזור</h1>
-        <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם 
+        <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם</p>
       </div>
     </div>
-    <div class="MainContactMap">
-      <div class="MainContact"></div>
-      <div class="MainMap"></div>
+    <div class="mainContactMap">
+      <div class="mainContact">
+        <form dir="rtl" class="mainContactForm">
+          <h1>הקופון עלינו</h1>
+          <p>
+            לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה
+          </p>
+          <label for="name" class="form-control-label">שם מלא</label>
+
+          <input
+            type="text"
+            id="name"
+            name="name"
+            class="form-control-input"
+            required
+          />
+
+          <label for="email" class="form-control-label">דוא״ל</label>
+
+          <input
+            type="email"
+            id="email"
+            name="email"
+            class="form-control-input"
+            required
+          />
+
+          <label for="uText" class="form-control-label">:תוכן ההודעה</label>
+
+          <textarea
+            id="uText"
+            cols="30"
+            rows="5"
+            class="form-control-input"
+          ></textarea>
+
+          <button
+            type="submit"
+            class="btn btn-info btn-sm float-end submitFont"
+          >
+            שליחה
+          </button>
+        </form>
+      </div>
+      <div class="mainMap">
+        
+          <img src="images/map.png" alt="">
+        
+      </div>
     </div>
 
     <div class="mainFooterIcons">
       <div class="icon icon1">
-        <img src="images/facebook-f.svg" alt="">
+        <img src="images/facebook-f.svg" alt="" />
       </div>
-      <div class="icon icon2"><img src="images/instagram.svg" alt=""></div>
-      <div class="icon icon3"><img src="images/linkedin-in.svg" alt=""></div>
-      <div class="icon icon4"><img src="images/phone-solid.svg" alt=""></div>
+      <div class="icon icon2"><img src="images/instagram.svg" alt="" /></div>
+      <div class="icon icon3"><img src="images/linkedin-in.svg" alt="" /></div>
+      <div class="icon icon4"><img src="images/phone-solid.svg" alt="" /></div>
     </div>
     <div class="mainFooterLine"></div>
 
