--- a/projects/product/product.html
+++ b/projects/product/product.html
@@ -12,14 +12,16 @@
       crossorigin="anonymous"
     />
     <style>
-      .row:nth-child(odd) {
-        background-color: #f2f2f2; /* Light grey color */
-      }
 
-      /* Selects even rows */
-      .row:nth-child(even) {
-        background-color: #e6e6e6; /* Darker grey color */
-      }
+.row:nth-child(odd) {
+  background-color: #f2f2f2; /* Light grey color */
+}
+
+/* Selects even rows */
+.row:nth-child(even) {
+  background-color: #e6e6e6; /* Darker grey color */
+}
+
 
       .flex-img-container {
         display: flex;
@@ -39,7 +41,7 @@
       <h1>DUCT</h1>
     </div>
     <div class="container" style="background-color: beige">
-      <form class="needs-validation" novalidate="">
+      <form class="needs-validation" id="formID" novalidate="">
         <div class="row g-3 first-line">
           <div class="col-md-4">
             <input
@@ -66,11 +68,7 @@
           </div>
 
           <div class="col-md-4">
-            <button
-              class="btn btn-primary btn-md w-100"
-              type="submit"
-              onclick="addNewLine()"
-            >
+            <button class="btn btn-primary btn-md w-100" type="button"  onclick="addNewLine()">
               Add
             </button>
           </div>
@@ -135,7 +133,7 @@
                 checked=""
                 required=""
               />
-              <label class="form-check-label" for="credit">In Stock</label>
+              <!-- <label class="form-check-label" for="credit">In Stock</label> -->
             </div>
             <div class="form-check">
               <input
@@ -145,17 +143,17 @@
                 class="form-check-input"
                 required=""
               />
-              <label class="form-check-label" for="debit">Missing</label>
+              <!-- <label class="form-check-label" for="debit">Missing</label> -->
             </div>
           </div>
         </div>
       </form>
     </div>
 
-    <div style="height: 2rem"></div>
+    <div style=" height: 2rem"></div>
 
-    <div class="container" style="background-color: bisque" id="allTable">
-      <div class="row g-1" id="tableLine">
+    <div class="container grid-container" id="tableLine" style="background-color: bisque">
+      <div class="row g-1" id="allTable">
         <div class="col col-md-2">Name</div>
         <div class="col col-md-2">Price</div>
         <div class="col col-md-2">Category</div>
@@ -163,14 +161,9 @@
         <div class="col col-md-2">Grade</div>
         <div class="col col-md-2">Availability</div>
       </div>
-      <!-- <div class="row g-1" >
-        <div class="col col-md-2" id="col1">1</div>
-        <div class="col col-md-2" id="col2">2</div>
-        <div class="col col-md-2" id="col3">3</div>
-        <div class="col col-md-2" id="col4">4</div>
-        <div class="col col-md-2" id="col5">5</div>
-        <div class="col col-md-2" id="col6">6</div>
-      </div> -->
+  
+      
+      
     </div>
 
     <script src="product.js"></script>
