--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <body>
     <!-- topBar (design change ) is אזור עליון:-->
     <header class="topBar">
+      <!-- migrate to Bootstrap old code -->
       <!-- <div id="headerTopLineTopBar"></div> -->
       <div id="flex-container">
         <img src="images/profile-image.jpeg" alt="profile" id="profileImage" />
