--- a/index.html
+++ b/index.html
@@ -28,40 +28,36 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <!-- <div class="container-fluid"> -->
 
-<!-- example of grid and navbar -->
+        <!-- example of grid and navbar -->
 
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <!-- Brand/logo -->
-    <a class="navbar-brand" href="#">Brand</a>
-    <!-- Toggler/collapsible Button -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="navbarNav">
+        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid"> -->
+        <!-- Brand/logo -->
+        <!-- <a class="navbar-brand" href="#">Brand</a> -->
+        <!-- Toggler/collapsible Button -->
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span> -->
+        <!-- </button> -->
+        <!-- Navbar links -->
+        <!-- <div class="collapse navbar-collapse" id="navbarNav">
       <div class="row w-100">
-        <div class="col">
-          <!-- Left-aligned links -->
-        </div>
-        <div class="col">
-          <!-- Center-aligned links -->
-        </div>
-        <div class="col">
-          <!-- Right-aligned links -->
-        </div>
+        <div class="col"> -->
+        <!-- Left-aligned links -->
+        <!-- </div>
+        <div class="col"> -->
+        <!-- Center-aligned links -->
+        <!-- </div>
+        <div class="col"> -->
+        <!-- Right-aligned links -->
+        <!-- </div>
       </div>
     </div>
   </div>
-</nav>
+</nav> -->
 
+        <!-- end of exmample -->
 
-<!-- end of exmample -->
-
-
-
-
+        <div class="row w-100"></div>
 
         <img
           src="images/profile-image.jpeg"
@@ -76,7 +72,7 @@
           id="myName"
         />
 
-        <a class="navbar-brand" href="#">Navbar</a>
+        <!-- <a class="navbar-brand" href="#">Navbar</a> -->
         <button
           class="navbar-toggler"
           type="button"
@@ -91,13 +87,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#contact"
+                >צור קשר</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#work">עבודות</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">אודות</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">ראשי</a>
             </li>
           </ul>
         </div>
+        <!-- </div> -->
         <!-- </div> -->
       </nav>
 
