--- a/index.html
+++ b/index.html
@@ -24,86 +24,59 @@
   </head>
   <body>
     <!-- topBar (design change ) is אזור עליון:-->
-    <header class="topBar">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <!-- <div class="container-fluid"> -->
+    <header class="topBar w-100">
+      <nav
+        class="navbar navbar-expand-sm bg-body-tertiary "
+        style="display: flex; justify-content: space-between"
+      >
+        
+        <div style="display: flex">
+          <img
+            src="images/profile-image.jpeg"
+            alt="profile"
+            class="img-fluid"
+            id="profileImage"
+          />
 
-        <!-- example of grid and navbar -->
-
-        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid"> -->
-        <!-- Brand/logo -->
-        <!-- <a class="navbar-brand" href="#">Brand</a> -->
-        <!-- Toggler/collapsible Button -->
-        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span> -->
-        <!-- </button> -->
-        <!-- Navbar links -->
-        <!-- <div class="collapse navbar-collapse" id="navbarNav">
-      <div class="row w-100">
-        <div class="col"> -->
-        <!-- Left-aligned links -->
-        <!-- </div>
-        <div class="col"> -->
-        <!-- Center-aligned links -->
-        <!-- </div>
-        <div class="col"> -->
-        <!-- Right-aligned links -->
-        <!-- </div>
-      </div>
-    </div>
-  </div>
-</nav> -->
-
-        <!-- end of exmample -->
-
-        <div class="row w-100"></div>
-
-        <img
-          src="images/profile-image.jpeg"
-          alt="profile"
-          class="img-fluid"
-          id="profileImage"
-        />
-        <img
-          src="images/myName.png"
-          alt="my name"
-          class="img-fluid"
-          id="myName"
-        />
-
-        <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#contact"
-                >צור קשר</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#work">עבודות</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">אודות</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">ראשי</a>
-            </li>
-          </ul>
+          <img
+            src="images/myName.png"
+            alt="my name"
+            class="img-fluid"
+            id="myName"
+            style="margin-top: 10px;"
+          />
         </div>
-        <!-- </div> -->
-        <!-- </div> -->
+        <div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#contact" style="white-space: nowrap"
+                  >צור קשר</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#work">עבודות</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#about">אודות</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">ראשי</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
 
       <!-- <div id="flex-container">
