--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse navM" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse nav" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" href="#contact"
