--- a/projects/reversi/reversi.html
+++ b/projects/reversi/reversi.html
@@ -7,7 +7,12 @@
     <!-- <title><i class="fa-solid fa-circle-dot" style="color: #0a0a0a;"></i>Reversi - Game</title> -->
     <title>Reversi - Game</title>
     <link rel="stylesheet" href="./style/reversi.css" />
-    <style></style>
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    /> -->
   </head>
   <body>
     <br />
@@ -16,93 +21,124 @@
 
     <div class="board">
       <div class="divTable">
+        <!-- <div class="container customCon">
+      <div class="row customRow" id="row1">
+        <div class="col-1  d-flex justify-content-center  customCol" id="col1"><div class="stoneWhite"></div></div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col2">2</div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col3">1</div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col4">2</div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col5"><div class="stoneWhite"></div></div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col6">2</div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col7">1</div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col8">2</div>
+      </div>
+      <div class="row customRow" id="row2">
+        <div class="col-1  d-flex justify-content-center customCol" id="col1"><div class="stoneBlack"></div></div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col2">2</div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col3">1</div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col4">2</div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col5"><div class="stoneWhite"></div></div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col6">2</div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col7">1</div>
+        <div class="col-1  d-flex justify-content-center customCol" id="col8">2</div>
+      </div>
+    </div> -->
+
         <table class="tableReversi">
-          <tr class="lineR" id="line1">
-            <td class="cellR inLine1"> <div class="centerCircle">
-              
+          <tr class="rowR" id="row1">
+            <td class="cellR inLine1">
+              <div class="centerCircle">
                 <div class="stoneBlack"></div>
               </div>
             </td>
-            <td class="cellR inLine1"> <div class="centerCircle">2</div></td>
-            <td class="cellR inLine1"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine1"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine1"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine1"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine1"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine1"> <div class="centerCircle"></div></td>
+            <td class="cellR inLine2"><div class="centerCircle"></div></td>
+            <td class="cellR inLine3"><div class="centerCircle"></div></td>
+            <td class="cellR inLine4"><div class="centerCircle"></div></td>
+            <td class="cellR inLine5"><div class="centerCircle"></div></td>
+            <td class="cellR inLine6"><div class="centerCircle"></div></td>
+            <td class="cellR inLine7"><div class="centerCircle"></div></td>
+            <td class="cellR inLine8"><div class="centerCircle"></div></td>
           </tr>
-          <tr class="lineR" id="line2">
-            <td class="cellR inLine2"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine2"> <div class="centerCircle"><div class="stoneWhite"></div></div></td>
-            <td class="cellR inLine2"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine2"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine2"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine2"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine2"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine2"> <div class="centerCircle"></div></td>
+          <tr class="rowR" id="row2">
+            <td class="cellR inLine1"><div class="centerCircle"></div></td>
+            <td class="cellR inLine2">
+              <div class="centerCircle"><div class="stoneWhite"></div></div>
+            </td>
+            <td class="cellR inLine3"><div class="centerCircle"></div></td>
+            <td class="cellR inLine4"><div class="centerCircle"></div></td>
+            <td class="cellR inLine5"><div class="centerCircle"></div></td>
+            <td class="cellR inLine6"><div class="centerCircle"></div></td>
+            <td class="cellR inLine7"><div class="centerCircle"></div></td>
+            <td class="cellR inLine8"><div class="centerCircle"></div></td>
           </tr>
-          <tr class="lineR" id="line3">
-            <td class="cellR inLine3"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine3"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine3"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine3"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine3"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine3"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine3"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine3"> <div class="centerCircle"></div></td>
+          <tr class="rowR" id="row3">
+            <td class="cellR inLine1"><div class="centerCircle"></div></td>
+            <td class="cellR inLine2"><div class="centerCircle"></div></td>
+            <td class="cellR inLine3"><div class="centerCircle"></div></td>
+            <td class="cellR inLine4"><div class="centerCircle"></div></td>
+            <td class="cellR inLine5"><div class="centerCircle"></div></td>
+            <td class="cellR inLine6"><div class="centerCircle"></div></td>
+            <td class="cellR inLine7"><div class="centerCircle"></div></td>
+            <td class="cellR inLine8"><div class="centerCircle"></div></td>
           </tr>
-          <tr class="lineR" id="line4">
-            <td class="cellR inLine4"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine4"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine4"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine4"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine4"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine4"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine4"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine4"> <div class="centerCircle"></div></td>
+          <tr class="rowR" id="row4">
+            <td class="cellR inLine1"><div class="centerCircle"></div></td>
+            <td class="cellR inLine2"><div class="centerCircle"></div></td>
+            <td class="cellR inLine3"><div class="centerCircle"></div></td>
+            <td class="cellR inLine4"><div class="centerCircle"></div></td>
+            <td class="cellR inLine5"><div class="centerCircle"></div></td>
+            <td class="cellR inLine6"><div class="centerCircle"></div></td>
+            <td class="cellR inLine7"><div class="centerCircle"></div></td>
+            <td class="cellR inLine8"><div class="centerCircle"></div></td>
           </tr>
-          <tr class="lineR" id="line5">
-            <td class="cellR inLine5"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine5"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine5"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine5"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine5"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine5"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine5"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine5"> <div class="centerCircle"></div></td>
+          <tr class="rowR" id="row5">
+            <td class="cellR inLine1"><div class="centerCircle"></div></td>
+            <td class="cellR inLine2"><div class="centerCircle"></div></td>
+            <td class="cellR inLine3"><div class="centerCircle"></div></td>
+            <td class="cellR inLine4"><div class="centerCircle"></div></td>
+            <td class="cellR inLine5"><div class="centerCircle"></div></td>
+            <td class="cellR inLine6"><div class="centerCircle"></div></td>
+            <td class="cellR inLine7"><div class="centerCircle"></div></td>
+            <td class="cellR inLine8"><div class="centerCircle"></div></td>
           </tr>
-          <tr class="lineR" id="line6">
-            <td class="cellR inLine6"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine6"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine6"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine6"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine6"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine6"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine6"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine6"> <div class="centerCircle"></div></td>
+          <tr class="rowR" id="row6">
+            <td class="cellR inLine1"><div class="centerCircle"></div></td>
+            <td class="cellR inLine2"><div class="centerCircle"></div></td>
+            <td class="cellR inLine3"><div class="centerCircle"></div></td>
+            <td class="cellR inLine4"><div class="centerCircle"></div></td>
+            <td class="cellR inLine5"><div class="centerCircle"></div></td>
+            <td class="cellR inLine6"><div class="centerCircle"></div></td>
+            <td class="cellR inLine7"><div class="centerCircle"></div></td>
+            <td class="cellR inLine8"><div class="centerCircle"></div></td>
           </tr>
-          <tr class="lineR" id="line7">
-            <td class="cellR inLine7"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine7"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine7"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine7"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine7"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine7"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine7"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine7"> <div class="centerCircle"></div></td>
+          <tr class="rowR" id="row7">
+            <td class="cellR inLinev"><div class="centerCircle"></div></td>
+            <td class="cellR inLinev"><div class="centerCircle"></div></td>
+            <td class="cellR inLinev"><div class="centerCircle"></div></td>
+            <td class="cellR inLinev"><div class="centerCircle"></div></td>
+            <td class="cellR inLinev"><div class="centerCircle"></div></td>
+            <td class="cellR inLinev"><div class="centerCircle"></div></td>
+            <td class="cellR inLinev"><div class="centerCircle"></div></td>
+            <td class="cellR inLinev"><div class="centerCircle"></div></td>
           </tr>
-          <tr class="lineR" id="line8">
-            <td class="cellR inLine8"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine8"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine8"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine8"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine8"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine8"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine8"> <div class="centerCircle"></div></td>
-            <td class="cellR inLine8"> <div class="centerCircle"></div></td>
+          <tr class="rowR" id="row8">
+            <td class="cellR inLine1"><div class="centerCircle"></div></td>
+            <td class="cellR inLine2"><div class="centerCircle"></div></td>
+            <td class="cellR inLine3"><div class="centerCircle"></div></td>
+            <td class="cellR inLine4"><div class="centerCircle"></div></td>
+            <td class="cellR inLine5"><div class="centerCircle"></div></td>
+            <td class="cellR inLine6"><div class="centerCircle"></div></td>
+            <td class="cellR inLine7"><div class="centerCircle"></div></td>
+            <td class="cellR inLine8"><div class="centerCircle"></div></td>
           </tr>
         </table>
       </div>
     </div>
   </body>
+  <!-- <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script> -->
+  <script src="./scripts/reversi.js"></script>
 </html>
