--- a/projects/reversi/reversi.html
+++ b/projects/reversi/reversi.html
@@ -113,6 +113,9 @@
         </table>
       </div>
     </div>
+    <div class="debugDiv">
+      
+    </div>
   </body>
   <!-- <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
