--- a/projects/flag/flag.html
+++ b/projects/flag/flag.html
@@ -10,29 +10,30 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style/flag.css">
+    <link rel="stylesheet" href="./style/flag.css" />
   </head>
   <body>
+    <div class="container border border-primary container-div">
+      <div class="input-group mb-3 input-div">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="city"
+          aria-label="Recipient's username"
+          aria-describedby="basic-addon2"
+          id="inputText"
+        />
 
-    <div class="container border border-primary container-div" >
-        
-
-        <div class="input-group mb-3 input-div" >
-            <input type="text" class="form-control" placeholder="city" aria-label="Recipient's username" aria-describedby="basic-addon2" id="inputText">
-            <span class="input-group-text" id="basic-addon2">search</span>
-          </div>
-
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-  </div>
-</div>
-        
+        <button type="button" class="btn btn-light" onclick="getCountry()">
+          search
+        </button>
       </div>
 
+      <div class="container" id="cardId">
+   
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
